--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
-    "redux": "^5.0.1"
+    "react-dom": "^18.3.1",
+    "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "eslint": "^9.4.0"
   }
 }
